# ezd

./: README.md  setup.cfg
ezd/: command.py  config.py  scrt.py  winsvc.py
