[metadata]
name = ezd
version = 0.1.1
description = Easy Deployment Tool
author = Gerhard Tan
author_email = gwohau.tan@gmail.com
home_page = https://github.com/koho/ezd
long_description = file: README.md
long_description_content_type = text/markdown
platform = any
license = MIT
license_file = LICENSE
keywords = deploy, service, python-script, cli
classifiers =
  Environment :: Console
  License :: OSI Approved :: MIT License
  Programming Language :: Python
  Topic :: System :: Installation/Setup
project_urls =
  Bug Tracker = https://github.com/koho/ezd/issues

[options]
packages = ezd
python_requires	= >=3.5
install_requires =
  pywin32; sys_platform == "win32"

[options.entry_points]
console_scripts =
    ezd = ezd.command:main
